Use mesosphere/mesos:1.5.0 as base image